[package]
name = "default-boxed"
version = "0.1.4"
description = "Helper trait to help create large struct on heap directly"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/default-boxed"
edition = "2018"
license = "MIT"
readme = "README.md"

[badges]
azure-devops = { project = "upsuper/upsuper", pipeline = "default-boxed", build = "1" }

[workspace]

[dependencies]
default-boxed-derive = { version = "0.1.3", path = "derive" }
