[package]
name = "default-boxed"
version = "0.1.6"
description = "Helper trait to help create large struct on heap directly"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/default-boxed"
keywords = ["box", "allocator", "memcpy"]
categories = ["memory-management"]
edition = "2018"
license = "MIT"
readme = "README.md"

[badges]
azure-devops = { project = "upsuper/upsuper", pipeline = "default-boxed", build = "1" }

[workspace]

[dependencies]
default-boxed-derive = { version = "0.1.4", path = "derive" }
