[package]
name = "default-boxed"
version = "0.1.9"
description = "Helper trait to help create large struct on heap directly"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/default-boxed"
keywords = ["box", "allocator", "memcpy"]
categories = ["memory-management", "no-std"]
edition = "2018"
license = "MIT"
readme = "README.md"

[badges]

[workspace]

[dependencies]
default-boxed-derive = { version = "0.1.5", path = "derive" }

[dev-dependencies]
trybuild = "1.0.28"
