[package]
name = "default-boxed-derive"
version = "0.1.2"
description = "Custom derive for default-boxed"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/default-boxed"
edition = "2018"
license = "MIT"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.2"
quote = "1.0.2"
syn = "1.0.5"
